--- a/templates/index.html
+++ b/templates/index.html
@@ -256,6 +256,15 @@
                         prediales a terrenos informales.</p>
                 </div>
             </li>
+            <li class="flex items-start gap-4">
+                <span class="material-symbols-outlined text-gray-900 dark:text-white font-light mt-0.5">layers</span>
+                <div>
+                    <p class="text-[10px] font-bold text-gray-900 dark:text-white tracking-tighter uppercase">Conversor
+                        GIS</p>
+                    <p class="text-[10px] font-sans text-gray-500 dark:text-gray-400 uppercase mt-1">Transforma
+                        Geodatabases en GeoPackages portables.</p>
+                </div>
+            </li>
         </ul>
     </section>
 </div>
